feat: 测试添加 github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
           git config --global user.email "rf.wangchn@foxmail.com"
           git config --global user.name "ruofei"
           npm install yarn -g
+          yarn
           yarn build
 
       - name: Deploy 2 Github Pages (repo - md5-secret)
