--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,12 +37,11 @@ jobs:
 
       - name: Deploy 2 Github Pages (repo - md5-secret)
         run: |
-          mkdir -p ~/docs
           cp ./build ~ -rfv
-          cd ~/docs
+          cd ~/build
+          git config --global init.defaultBranch docs
           git init
           git add .
           git commit 'initialize'
-          git checkout docs
           git remote add origin git@github.com:smpower/md5-secret.git
           git push --set-upstream origin docs
